Changed generes from string to List<Genre> + Genre visible in GUI